# variadic-struct

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
cmake/: CMakeLists-gtest.txt.in  CheckFeatures.cmake  variadic-struct-config.cmake.in
include/varstruct/: field.h  literal.h  struct.h  traits.h
tests/: CMakeLists.txt  test_traits.cpp  test_varstruct.cpp
tests/assert-tests/: invalid_index_get_field.cpp  no_parent_parent.cpp  not_struct_find_field.cpp  not_struct_find_field_id.cpp  not_struct_has_field.cpp  not_struct_has_field_id.cpp  not_struct_parent.cpp  not_struct_size.cpp  too_many_args_constructor.cpp  types.h  unconvertible_arg_field_set.cpp  unknown_field_get.cpp  unknown_field_is_set.cpp  unknown_field_set.cpp  unknown_name_find_field.cpp
tests/utils/: compiler.cpp  compiler.h.in
